Add schema proposals first draft

--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -5,6 +5,7 @@ description: Ensure streamlined, error-free schema development using the GraphOS
 
 GraphOS provides schema development tools to foster collaboration and efficiently deploy changes to your supergraph schema. These tools fall into two main categories:
 
+- **Schema proposals** enable native, streamlined collaboration on schema changes. Team members can propose schema changes that other team members review and approve.
 - **Schema governance** tools let you manage, validate, and enforce consistency standards in your supergraph schema to ensure reliability and compatibility across different services and teams.
 - **Schema delivery** tools let you integrate schema publication seamlessly into your DevOps workflows.
 
