--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -423,7 +423,7 @@ Guide each client team to follow the implementation steps presented in the [incr
 
 ## Persisted query list management
 
-From the **Persisted Query Lists** page, you can perform the following actions by clicking the menu button under **Actions** on the right of any PQL:
+From the **Persisted Query Lists** page, you can perform the following actions by clicking the ⋯ button under **Actions** on the right of any PQL:
 
 - Download the list as a JSON file
 - Publish operations
@@ -441,15 +441,15 @@ The **Publish operations** action provides the [Rover CLI command to do so](/rov
 
 ### Operation management
 
-You can add new operations to a PQL by using the the [Rover CLI](/rover/commands/persisted-queries/) and you can delete operations from the PQL's page in GraphOS Studio. Since every operation should [have a unique ID](#id), you can't update existing operations: if you try to publish a revised operation [`body`](#body) for an existing operation ID, Rover returns an error.
+You can add new operations to a PQL by using the the [Rover CLI](/rover/commands/persisted-queries/) and you can delete operations from the PQL's page in GraphOS Studio. Since every operation should [have a unique ID](#id), you can't update existing operations—if you try to publish a revised operation [`body`](#body) for an existing operation ID, Rover returns an error.
 
 #### Adding operations
 
-To add new operations to a PQL, you need to [publish an updated manifest using the Rover CLI](#32-publish-manifests-to-the-pql). If the manifest you're publishing doesn't include an operation from a previous version, this does _not_ delete the operation from the PQL. Each manifest publication only adds any new operations to the list.
+To add new operations to a PQL, you need to [publish an updated manifest using the Rover CLI](#32-publish-manifests-to-the-pql). If the manifest you're publishing doesn't include an operation in the currently published manifest, this does _not_ delete the operation from the PQL. Each manifest publication only adds any new operations to the list.
 
 #### Deleting operations
 
-If you want to delete an operation, you must do so from Studio. From the persisted query lists page, click a persisted query list to open it. Then, click the **Actions** button next to a particular operation and select **Delete**.
+If you want to delete an operation, you must do so from Studio. From the persisted query lists page, click a persisted query list to open it. Then, click the ⋯ button under **Actions** next to a particular operation and select **Delete**.
 
   <img
     className="screenshot"
