--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -423,7 +423,7 @@ Guide each client team to follow the implementation steps presented in the [incr
 
 ## Persisted query list management
 
-From the **Persisted Query Lists** page, you can perform the following actions by clicking the ⋯ button under **Actions** on the right of any PQL:
+From the **Persisted Query Lists** page, you can perform the following actions by clicking the **•••** menu under the **Actions** column on the right of any PQL:
 
 - Download the list as a JSON file
 - Publish operations
@@ -441,7 +441,7 @@ The **Publish operations** action provides the [Rover CLI command to do so](/rov
 
 ### Operation management
 
-You can add new operations to a PQL by using the the [Rover CLI](/rover/commands/persisted-queries/) and you can delete operations from the PQL's page in GraphOS Studio. Since every operation should [have a unique ID](#id), you can't update existing operations—if you try to publish a revised operation [`body`](#body) for an existing operation ID, Rover returns an error.
+You can add new operations to a PQL by using the [Rover CLI](/rover/commands/persisted-queries/), and you can delete operations from the PQL's page in GraphOS Studio. Since every operation should [have a unique ID](#id), you can't update existing operations—if you try to publish a revised operation [`body`](#body) for an existing operation ID, Rover returns an error.
 
 #### Adding operations
 
@@ -449,7 +449,7 @@ To add new operations to a PQL, you need to [publish an updated manifest using t
 
 #### Deleting operations
 
-If you want to delete an operation, you must do so from Studio. From the persisted query lists page, click a persisted query list to open it. Then, click the ⋯ button under **Actions** next to a particular operation and select **Delete**.
+If you want to delete an operation, you must do so from Studio. From the **Persisted Query Lists** page, click a persisted query list to open it. Then, click the **•••** menu under the **Actions** column next to a particular operation and select **Delete**.
 
   <img
     className="screenshot"
@@ -460,11 +460,10 @@ If you want to delete an operation, you must do so from Studio. From the persist
 You should only delete operations that are problematic and shouldn't be executed. Even for such operations, it's important to recognize that operation deletions can cause application errors for legitimate clients, depending on your router's [security level](#router-security-levels) and if the client is sending full operation strings or operation IDs.
 
 - Regardless of security level, if a client sends an _operation ID_ of a deleted operation, the router _rejects the operation_. 
-- If you enabled [safelisting](#safelisting), the router rejects _any_ operations you deleted from the PQL but that your clients still perform.
-  - This is true whether clients send full operation strings or operation IDs for the deleted operation.
-- When [allowing operation IDs](#allow-operation-ids) or in [audit mode](#audit-mode-dry-run), if a client sends the full operation string of a deleted operation, the router executes it.
+- If you enabled [safelisting](#safelisting), the router rejects _any_ operations you deleted from the PQL but that your clients still perform, whether clients send operation IDs or full operation strings for the deleted operation.
+- When the router [allows operation IDs](#allow-operation-ids) or is in [audit mode](#audit-mode-dry-run), if a client sends the full operation string of a deleted operation, the router executes it.
 
-Although deleting options cannot be directly undone via the Studio UI, you can always republish a deleted operation using [the Rover CLI](#32-publish-manifests-to-the-pql).
+Although you can't undo operation deletions directly via the Studio UI, you can always republish a deleted operation using [the Rover CLI](#32-publish-manifests-to-the-pql).
 
 ## Manifest format
 
