--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -7,7 +7,7 @@ description: Propose, collaborate on, and review schema changes before publicati
 
 As your supergraph schema grows in complexity, it can be increasingly challenging to make changes to it. Schema development can stall without the clear cross-team communication needed to negotiate, verify, and track changes.
 
-**Schema proposals** provide a centralized, GraphOS-native schema change management process that strengthens schema governance and foster collaboration:
+**Schema proposals** provide a centralized, GraphOS-native schema change management process that strengthens schema governance and fosters collaboration:
 
 - Because the proposal process is conducted within GraphOS, it leverages GraphOS schema checks at every stage, minimizing the likelihood of errors and inconsistencies. Additionally, the process consolidates a comprehensive history of discussions and changes, enhancing auditability.
 
